--- a/invoice_installment_extension/views/account_payment_views.xml
+++ b/invoice_installment_extension/views/account_payment_views.xml
@@ -16,7 +16,8 @@
                         <group>
                             <field name="payment_due_date_filter" string="Due Date" 
                                    options="{'datepicker': {'min_date': False}}"
-                                   help="This date will be applied to all invoices as due_date_filter"/>
+                                   help="This date will be applied to all invoices as due_date_filter"
+                                   invisible="1"/>
                         </group>
                         <group>
                             <field name="amount" widget="monetary" options="{'currency_field': 'currency_id'}"/>
@@ -35,7 +36,7 @@
                     
                     <field name="control_payment_ids" nolabel="1">
                         <list string="Transions" editable="bottom" create="1" delete="1">
-                            <field name="invoice_id" required="1" options="{'no_create': True, 'no_create_edit': True}"/>
+<!--                            <field name="invoice_id" required="1" options="{'no_create': True, 'no_create_edit': True}" invisible="1"/>-->
                             <field name="invoice_name" string="Transion" readonly="1"/>
                             <field name="invoice_date" string="Transion Date" readonly="1"/>
                             <field name="amount_total" 
@@ -72,14 +73,13 @@
                         </div>
                     </group>
                     
-                    <!-- Process payments button -->
-                    <group invisible="not control_payment_ids or total_control_to_pay &lt;= 0">
+                    <!-- Process payments button (hidden, called automatically on validate) -->
+                    <group invisible="1">
                         <button name="action_process_control_payments" 
                                 string="Process Control Payments" 
                                 type="object" 
                                 class="oe_highlight"
-                                icon="fa-money"
-                                invisible="control_payment_remaining_amount != 0"/>
+                                icon="fa-money" invisible="1"/>
                     </group>
                 </page>
             </xpath>
