--- a/invoice_installment_extension/views/control_payment_views.xml
+++ b/invoice_installment_extension/views/control_payment_views.xml
@@ -6,7 +6,7 @@
         <field name="model">control.payment</field>
         <field name="arch" type="xml">
             <list string="Control Payments" editable="bottom">
-                <field name="invoice_id" required="1" options="{'no_create': True, 'no_create_edit': True}"/>
+<!--                <field name="invoice_id" required="1" options="{'no_create': True, 'no_create_edit': True}" invisible="1"/>-->
                 <field name="invoice_name" string="Transion" readonly="1"/>
                 <field name="invoice_date" string="Transion Date" readonly="1"/>
                 <field name="amount_total" 
@@ -38,7 +38,7 @@
                     <group>
                         <group>
                             <field name="payment_id" readonly="1"/>
-                            <field name="invoice_id" required="1" options="{'no_create': True, 'no_create_edit': True}"/>
+<!--                            <field name="invoice_id" required="1" options="{'no_create': True, 'no_create_edit': True}" invisible="1"/>-->
                         </group>
                         <group>
                             <field name="currency_id" invisible="1"/>
