--- a/invoice_installment_extension/views/control_payment_views.xml
+++ b/invoice_installment_extension/views/control_payment_views.xml
@@ -5,23 +5,27 @@
         <field name="name">control.payment.tree</field>
         <field name="model">control.payment</field>
         <field name="arch" type="xml">
-            <list string="Control Payments" editable="bottom">
+            <list string="Control Payments" editable="bottom" create="0" delete="0">
 <!--                <field name="invoice_id" required="1" options="{'no_create': True, 'no_create_edit': True}" invisible="1"/>-->
-                <field name="invoice_name" string="Transion" readonly="1"/>
-                <field name="invoice_date" string="Transion Date" readonly="1"/>
+                <field name="invoice_name" string="Transaction" readonly="1"/>
+                <field name="invoice_date" string="Transaction Date" readonly="1"/>
                 <field name="amount_total" 
+                       string="Total Amount"
                        widget="monetary" 
                        options="{'currency_field': 'currency_id'}" 
                        readonly="1"/>
                 <field name="total_remaining_amount" 
+                       string="Remaining Amount"
                        widget="monetary" 
                        options="{'currency_field': 'currency_id'}" 
                        readonly="1"/>
                 <field name="due_amount" 
+                       string="Due Amount"
                        widget="monetary" 
                        options="{'currency_field': 'currency_id'}" 
                        readonly="1"/>
                 <field name="to_pay" 
+                       string="To Pay"
                        widget="monetary" 
                        options="{'currency_field': 'currency_id'}"/>
             </list>
@@ -37,26 +41,30 @@
                 <sheet>
                     <group>
                         <group>
-                            <field name="payment_id" readonly="1"/>
+                            <field name="payment_id" string="Payment" readonly="1"/>
 <!--                            <field name="invoice_id" required="1" options="{'no_create': True, 'no_create_edit': True}" invisible="1"/>-->
                         </group>
                         <group>
                             <field name="currency_id" invisible="1"/>
-                            <field name="invoice_name" string="Transion" readonly="1"/>
-                            <field name="invoice_date" string="Transion Date" readonly="1"/>
+                            <field name="invoice_name" string="Transaction" readonly="1"/>
+                            <field name="invoice_date" string="Transaction Date" readonly="1"/>
                             <field name="amount_total" 
+                                   string="Total Amount"
                                    widget="monetary" 
                                    options="{'currency_field': 'currency_id'}" 
                                    readonly="1"/>
                             <field name="total_remaining_amount" 
+                                   string="Remaining Amount"
                                    widget="monetary" 
                                    options="{'currency_field': 'currency_id'}" 
                                    readonly="1"/>
                             <field name="due_amount" 
+                                   string="Due Amount"
                                    widget="monetary" 
                                    options="{'currency_field': 'currency_id'}" 
                                    readonly="1"/>
                             <field name="to_pay" 
+                                   string="To Pay"
                                    widget="monetary" 
                                    options="{'currency_field': 'currency_id'}"/>
                         </group>
