--- a/invoice_installment_extension/views/payment_records_views.xml
+++ b/invoice_installment_extension/views/payment_records_views.xml
@@ -13,6 +13,7 @@
                 <field name="installment_name" string="Installment"/>
                 <field name="installment_due_date" string="Due Date"/>
                 <field name="paid_amount" 
+                       string="Paid Amount"
                        widget="monetary" 
                        options="{'currency_field': 'currency_id'}"/>
                 <field name="previous_state" string="Previous State"/>
@@ -32,41 +33,43 @@
                 <sheet>
                     <group>
                         <group>
-                            <field name="name" readonly="1"/>
-                            <field name="payment_id" options="{'no_create': True, 'no_create_edit': True}"/>
-                            <field name="payment_name" readonly="1"/>
-                            <field name="payment_date" readonly="1"/>
+                            <field name="name" string="Reference" readonly="1"/>
+                            <field name="payment_id" string="Payment" options="{'no_create': True, 'no_create_edit': True}"/>
+                            <field name="payment_name" string="Payment Name" readonly="1"/>
+                            <field name="payment_date" string="Payment Date" readonly="1"/>
                         </group>
                         <group>
-                            <field name="invoice_id" readonly="1" options="{'no_create': True, 'no_create_edit': True}"/>
-                            <field name="invoice_name" readonly="1"/>
-                            <field name="installment_id" readonly="1" options="{'no_create': True, 'no_create_edit': True}"/>
-                            <field name="installment_name" readonly="1"/>
-                            <field name="installment_due_date" readonly="1"/>
+                            <field name="invoice_id" string="Invoice" readonly="1" options="{'no_create': True, 'no_create_edit': True}"/>
+                            <field name="invoice_name" string="Invoice Name" readonly="1"/>
+                            <field name="installment_id" string="Installment" readonly="1" options="{'no_create': True, 'no_create_edit': True}"/>
+                            <field name="installment_name" string="Installment Name" readonly="1"/>
+                            <field name="installment_due_date" string="Due Date" readonly="1"/>
                         </group>
                     </group>
                     <group>
                         <group>
                             <field name="paid_amount" 
+                                   string="Paid Amount"
                                    widget="monetary" 
                                    options="{'currency_field': 'currency_id'}"
                                    readonly="1"/>
-                            <field name="previous_state" readonly="1"/>
-                            <field name="new_state" readonly="1"/>
-                            <field name="action_type" readonly="1"/>
+                            <field name="previous_state" string="Previous State" readonly="1"/>
+                            <field name="new_state" string="New State" readonly="1"/>
+                            <field name="action_type" string="Action Type" readonly="1"/>
                         </group>
                         <group>
                             <field name="currency_id" invisible="1"/>
                             <field name="installment_amount" 
+                                   string="Installment Amount"
                                    widget="monetary" 
                                    options="{'currency_field': 'currency_id'}"
                                    readonly="1"/>
-                            <field name="create_date" readonly="1"/>
-                            <field name="write_date" readonly="1"/>
+                            <field name="create_date" string="Created On" readonly="1"/>
+                            <field name="write_date" string="Last Updated" readonly="1"/>
                         </group>
                     </group>
                     <group>
-                        <field name="notes" placeholder="Additional notes about this payment record..."/>
+                        <field name="notes" string="Notes" placeholder="Additional notes about this payment record..."/>
                     </group>
                 </sheet>
             </form>
